--- a/DressAppSolution/DressApp/DressApp.csproj
+++ b/DressAppSolution/DressApp/DressApp.csproj
@@ -72,6 +72,13 @@
     <Compile Include="ViewModel\KinectViewModel.cs" />
     <Compile Include="ViewModel\KinectViewModelLoader.cs" />
     <Compile Include="ViewModel\ViewModelBase.cs" />
+    <Compile Include="View\Buttons\Events\ButtonsManager.cs" />
+    <Compile Include="View\Buttons\Events\HandCursorEventArgs.cs" />
+    <Compile Include="View\Buttons\Events\KinectEvents.cs" />
+    <Compile Include="View\Buttons\Events\KinectInput.cs" />
+    <Compile Include="View\Buttons\KinectButton.cs" />
+    <Compile Include="View\Buttons\KinectRepeatableButton.cs" />
+    <Compile Include="View\Buttons\KinectScreenShotButton.cs" />
     <Compile Include="View\Helpers\DataTemplate3D.cs" />
     <Compile Include="View\Helpers\HelixViewport3DEx.cs" />
     <Compile Include="View\Helpers\ItemsVisual3D.cs" />
