--- a/DressAppSolution/DressApp/DressApp.csproj
+++ b/DressAppSolution/DressApp/DressApp.csproj
@@ -46,6 +46,7 @@
     <Reference Include="Microsoft.Kinect, Version=1.8.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows" />
     <Reference Include="System.Windows.Interactivity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml" />
@@ -67,7 +68,13 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Model\SkeletonManager.cs" />
+    <Compile Include="ViewModel\ButtonItems\BagButtonViewModel.cs" />
+    <Compile Include="ViewModel\ButtonItems\ButtonViewModelBase.cs" />
+    <Compile Include="ViewModel\ButtonItems\ClothingButtonViewModel.cs" />
+    <Compile Include="ViewModel\ButtonItems\TopMenuButtons\TopMenuManager.cs" />
     <Compile Include="ViewModel\ClothingManager.cs" />
+    <Compile Include="ViewModel\HandTracking.cs" />
+    <Compile Include="ViewModel\Helpers\OrderedDictionary.cs" />
     <Compile Include="ViewModel\KinectService.cs" />
     <Compile Include="ViewModel\KinectViewModel.cs" />
     <Compile Include="ViewModel\KinectViewModelLoader.cs" />
