--- a/DressAppSolution/DressApp/packages.config
+++ b/DressAppSolution/DressApp/packages.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="1.2" targetFramework="net452" />
   <package id="HelixToolkit" version="2015.1.715" targetFramework="net452" />
   <package id="HelixToolkit.Wpf" version="2015.1.715" targetFramework="net452" />
+  <package id="Prism" version="5.0.0" targetFramework="net452" />
+  <package id="Prism.Composition" version="5.0.0" targetFramework="net452" />
+  <package id="Prism.Interactivity" version="5.0.0" targetFramework="net452" />
+  <package id="Prism.Mvvm" version="1.0.0" targetFramework="net452" />
+  <package id="Prism.PubSubEvents" version="1.0.0" targetFramework="net452" />
 </packages>
