--- a/DressAppSolution/WpfApp1/ManagementDressApp.csproj
+++ b/DressAppSolution/WpfApp1/ManagementDressApp.csproj
@@ -113,5 +113,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DressApp\DressApp.csproj">
+      <Project>{1a075d3b-f8f8-41e0-99dd-70197da79312}</Project>
+      <Name>DressApp</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
